Add Japanese work explanation

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 					<div data-src="./assets/img/eyecatch_passport.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">May 2019</div>
-					<div class="title">Visualization of World Passport Power</div>
+					<div class="date">2019.05</div>
+					<div class="title-jp">ビジュアルで見るパスポートのチカラ</div>
+					<div class="title-en">Visualization of World Passport Power</div>
 				</div>
 			</div>
 			<div class="work">
@@ -44,8 +45,9 @@
 					<div data-src="./assets/img/eyecatch_landprices2.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">March 2019</div>
-					<div class="title">Japan Land Values 3D map</div>
+					<div class="date">2019.03</div>
+					<div class="title-jp">全国「公示地価」最新価格・過去比較3Dマップ</div>
+					<div class="title-en">Japan Land Values 3D map</div>
 				</div>
 			</div>
 			<div class="work">
@@ -53,8 +55,9 @@
 					<div data-src="./assets/img/eyecatch_librarians.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">January 2019</div>
-					<div class="title">Job Security of Librarians</div>
+					<div class="date">2019.01</div>
+					<div class="title-jp">都道府県別「図書館司書」の非正規雇用</div>
+					<div class="title-en">Job Security of Librarians</div>
 				</div>
 			</div>
 			<div class="work">
@@ -62,8 +65,9 @@
 					<div data-src="./assets/img/eyecatch_landprices.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">November 2018</div>
-					<div class="title">Average Land Prices Map of Japanese Municipalities</div>
+					<div class="date">2018.11</div>
+					<div class="title-jp">全国「基準地価」市区町村平均値マップ</div>
+					<div class="title-en">Average Land Prices Map of Japanese Municipalities</div>
 				</div>
 			</div>
 			<div class="work">
@@ -71,8 +75,9 @@
 					<div data-src="./assets/img/eyecatch_temperature.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">July 2018</div>
-					<div class="title">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
+					<div class="date">2018.07</div>
+					<div class="title-jp">東京の夏は徐々に暑く・長くなっている</div>
+					<div class="title-en">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
 				</div>
 			</div>
 			<div class="work">
@@ -80,8 +85,9 @@
 					<div data-src="./assets/img/eyecatch_viz4socialgood.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">July 2018</div>
-					<div class="title">Visualization of Human Trafficking</div>
+					<div class="date">2018.07</div>
+					<div class="title-jp">人身売買データの可視化</div>
+					<div class="title-en">Visualization of Human Trafficking</div>
 				</div>
 			</div>
 			<div class="work">
@@ -89,8 +95,9 @@
 					<div data-src="./assets/img/eyecatch_teachers.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">March 2018</div>
-					<div class="title">Schools are depending on part-time teachers</div>
+					<div class="date">2018.03</div>
+					<div class="title-jp">都道府県別「非正規教員」比率</div>
+					<div class="title-en">Schools are depending on part-time teachers</div>
 				</div>
 			</div>
 			<div class="work">
@@ -98,8 +105,9 @@
 					<div data-src="./assets/img/eyecatch_jpycoins.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">February 2018</div>
-					<div class="title">Just Visualization: Japanese Coins</div>
+					<div class="date">2018.02</div>
+					<div class="title-jp">日本の「硬貨」をビジュアライズ</div>
+					<div class="title-en">Just Visualization: Japanese Coins</div>
 				</div>
 			</div>
 			<div class="work">
@@ -107,8 +115,9 @@
 					<div data-src="./assets/img/eyecatch_dissolution.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">November 2017</div>
-					<div class="title">Elections and Dissolutions in The G7</div>
+					<div class="date">2017.11</div>
+					<div class="title-jp">G7各国における議会（下院）の総選挙と解散</div>
+					<div class="title-en">Elections and Dissolutions in The G7</div>
 				</div>
 			</div>
 			<div class="work">
@@ -116,8 +125,9 @@
 					<div data-src="./assets/img/eyecatch_trade.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">August 2017</div>
-					<div class="title">Material to Product</div>
+					<div class="date">2017.08</div>
+					<div class="title-jp">日本の貿易品目・貿易相手</div>
+					<div class="title-en">Material to Product</div>
 				</div>
 			</div>
 			<div class="work">
@@ -125,8 +135,9 @@
 					<div data-src="./assets/img/eyecatch_pyramids.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">July 2017</div>
-					<div class="title">From Uganda to Japan</div>
+					<div class="date">2017.07</div>
+					<div class="title-jp">世界各国の人口ピラミッド</div>
+					<div class="title-en">From Uganda to Japan</div>
 				</div>
 			</div>
 			<div class="work">
@@ -134,8 +145,9 @@
 					<div data-src="./assets/img/eyecatch_nobelprize.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">May 2017</div>
-					<div class="title">Scientists Making a Queue</div>
+					<div class="date">2017.05</div>
+					<div class="title-jp">ノーベル賞の「高齢化」インタラクティブグラフ</div>
+					<div class="title-en">Scientists Making a Queue</div>
 				</div>
 			</div>
 			<div class="work">
@@ -143,8 +155,9 @@
 					<div data-src="./assets/img/eyecatch_musicxml.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">April, 2017</div>
-					<div class="title">Music score visualization</div>
+					<div class="date">2017.04</div>
+					<div class="title-jp">楽譜のビジュアライゼーション</div>
+					<div class="title-en">Music score visualization</div>
 				</div>
 			</div>
 			<div class="work">
@@ -152,8 +165,9 @@
 					<div data-src="./assets/img/eyecatch_collisions.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">April, 2017</div>
-					<div class="title">Vehicle collisions in Edinburgh</div>
+					<div class="date">2017.04</div>
+					<div class="title-jp">エディンバラ市の交通事故マップ</div>
+					<div class="title-en">Vehicle collisions in Edinburgh</div>
 				</div>
 			</div>
 			<div class="work">
@@ -161,8 +175,9 @@
 					<div data-src="./assets/img/eyecatch_population.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">9 Apr 2017</div>
-					<div class="title">Population of Japan</div>
+					<div class="date">2017.04</div>
+					<div class="title-jp">日本の年齢別人口</div>
+					<div class="title-en">Population of Japan</div>
 				</div>
 			</div>
 			<div class="work">
@@ -170,8 +185,9 @@
 					<div data-src="./assets/img/eyecatch_tourists.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">11 Feb 2017</div>
-					<div class="title">Tourists to Japan</div>
+					<div class="date">2017.02</div>
+					<div class="title-jp">日本への観光客</div>
+					<div class="title-en">Tourists to Japan</div>
 				</div>
 			</div>
 			<div class="work">
@@ -179,8 +195,9 @@
 					<div data-src="./assets/img/eyecatch_earthquakes.png" class="lazy"></div>
 				</a>
 				<div class="info">
-					<div class="date">23 Feb 2017</div>
-					<div class="title">Earthquakes on the earth</div>
+					<div class="date">2017.02</div>
+					<div class="title-jp">世界の地震アニメーション</div>
+					<div class="title-en">Earthquakes on the earth</div>
 				</div>
 			</div>
           </div>
