--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Animation of earthquakes on the earth in the past an hour to 30 days">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/earthquakes/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Earthquakes on the earth" />
-    <meta property="og:description" content="Animation of earthquakes on the earth in the past an hour to 30 days" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_earthquakes.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Earthquakes on the earth</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,9 +26,11 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">23 Feb 2017</div>
-            <h1>Earthquakes on the earth</h1>
-            <h3>Animation of earthquakes on the earth in the past an hour to 30 days</h3>
+            <div class="date">2017.02</div>
+            <h1>世界の地震アニメーション</h1>
+            <h3>USGSの公表する地震データをマッピングした</h3>
+            <h2>Earthquakes on the earth</h2>
+            <h4>Animation of earthquakes on the earth in the past an hour to 30 days</h3>
           </div>
           <div id="eyecatch-block">
             <a href="./" target="_blank">
@@ -36,7 +38,8 @@
             </a>
           </div>
           <div id="article-block">
-            <p class="en">This work was originallu submitted as a class assignment, and then improved in 2018.</p>
+            <p class="jp"></p>
+            <p class="en">This work was originally submitted as a class assignment, and then improved in 2018.</p>
             <p class="en">Data source: <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/" target="_blank">US Georogical Survey</a></p>
             <p class="en">Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
             <p><a class="button" href="./" target="_blank">See the App</a></p>
