--- a/works/jpycoins/description-en.html
+++ b/works/jpycoins/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Number of Coins Issued in Japan from 1948 to 2016">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Just Visualization: Japanese Coins" />
-    <meta property="og:description" content="Number of Coins Issued in Japan from 1948 to 2016" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Just Visualization: Japanese Coins</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,9 +26,11 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">February 2018</div>
-            <h1>Just Visualization: Japanese Coins</h1>
-            <h3>Number of Coins Issued in Japan from 1948 to 2016</h3>
+            <div class="date">2018.02</div>
+            <h1>日本の「硬貨」をビジュアライズ</h1>
+            <h3>過去70年間における硬貨の発行枚数をミュージックイコライザー風にビジュアライズした</h3>
+            <h2>Just Visualization: Japanese Coins</h2>
+            <h4>Number of Coins Issued in Japan from 1948 to 2016</h3>
           </div>
           <div id="eyecatch-block">
             <a href="./" target="_blank">
@@ -36,6 +38,7 @@
             </a>
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
             <p class="en">The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
             <p class="en">This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
