--- a/works/landprices2/description-en.html
+++ b/works/landprices2/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="The latest price and comparison with past values">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/landprices2/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Japan Land Values 3D map" />
-    <meta property="og:description" content="The latest price and comparison with past values" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices2.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Japan Land Values 3D map</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,20 +26,20 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">March 2019</div>
-            <h1>Japan Land Values 3D map</h1>
-            <h3>The latest price and comparison with past values</h3>
+            <div class="date">2019.03</div>
+            <h1>全国「公示地価」最新価格・過去比較3Dマップ</h1>
+            <h3>全国約26000地点の公示地価を1989〜2019年まで過去30年分マップに表現した</h3>
+            <h2>Japan Land Values 3D map</h2>
+            <h4>The latest price and comparison with past values</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_landprices2.png">
           </div>
           <div id="article-block">
+            <p class="jp">国土交通省が発表した公示地価をDeck.glを使って3Dマップに表現しました。</p>
+            <p class="jp">この作品は<a href="http://toyokeizai.net/sp/visual/tko/landprices3/" target="_blank">東洋経済オンライン</a>にて公開されています。</p>
             <p class="en">3D map of land prices from 1989, the peak of Japanese real estate bubble, to 2019, the latest, in order to see how land land prices have fluctuated.</p>
-            <p class="en">The land values data in 1989, 1999, 2009, 2018, and 2019 (as of January 1st) was retrieved from Japanese <a href="http://www.land.mlit.go.jp/webland/" target="_blank">The Ministry of Land, Infrastructure, Transport, and Tourism</a> (MLIT). Deck.gl, a WebGL framework provided by UBER was used in order to draw this 3D map. Colors and heights are pre-calculated based on values.</p>
-            <p class="en">Since each point is aggregated every 200 meters, one bar (hexagon) may contain multiple points. In that case, color and height are calculated based on the average price or rate of fluctuation. By tapping or mouse hovering, you can see the detailed information about the point (the nearest transportation facility and the distance, the price or the rate of fluctuation, area, current usage) will be shown. These information is also obtained from MLIT.</p>
-            <p class="en">Top left buttons can rotate camera. You can select a value (latest or comparison with the past) and points (all / residential area / business area). In the comparison map, bar colors are red if increased from the past and blue if decreased. The darker and the taller each bar is, the larger fluctuation the point has experienced.</p>
-            <p class="en">This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/landprices3/en.html" target="_blank">Toyo Keizai Online</a> [English].</p>
-            <p class="en">Languages and libraries: Deck.gl, JavaScript (P5.js, jQuery), SQL (MySQL) and Python for retrieving and handling data</p>
+            <p class="en">This work is published in <a href="http://toyokeizai.net/sp/visual/tko/landprices3/en.html" target="_blank">Toyo Keizai Online</a>.</p>
           </div>
         </div>
 				<div id="loading-message">
