--- a/works/population/description-en.html
+++ b/works/population/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Population of Japan from 1980 to 2040, in each age class">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/population/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Population of Japan" />
-    <meta property="og:description" content="Population of Japan from 1980 to 2040, in each age class" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_population.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Population of Japan</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,14 +26,17 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">9 Apr 2017</div>
-            <h1>Population of Japan</h1>
-            <h3>Population of Japan from 1980 to 2040, in each age class</h3>
+            <div class="date">2017.04</div>
+            <h1>日本の年齢別人口</h1>
+            <h3>1980年から2040年までの日本の年齢別人口を3Dで表現</h3>
+            <h2>Population of Japan</h2>
+            <h4>Population of Japan from 1980 to 2040, in each age class</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_population.png">
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This work was submitted as a class assignment.</p>
             <p class="en">Languages and libraries: JavaScript (Three.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
           </div>
