--- a/works/teachers/description-en.html
+++ b/works/teachers/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="How and why the job security of elementary and junior high school teachers is collapsing">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/teachers/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Schools are depending on part-time teachers" />
-    <meta property="og:description" content="How and why the job security of elementary and junior high school teachers is collapsing" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Schools are depending on part-time teachers</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,9 +26,11 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">March 2018</div>
-            <h1>Schools are depending on part-time teachers</h1>
-            <h3>How and why the job security of elementary and junior high school teachers is collapsing</h3>
+            <div class="date">2018.03</div>
+            <h1>都道府県別「非正規教員」比率</h1>
+            <h3>公立小中学校における都道府県別の非正規教員データを可視化</h3>
+            <h2>Schools are depending on part-time teachers</h2>
+            <h4>How and why the job security of elementary and junior high school teachers is collapsing</h3>
           </div>
           <div id="eyecatch-block">
             <a href="./" target="_blank">
@@ -36,6 +38,7 @@
             </a>
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This project is about the job security of school teachers. In Japan, most children are enrolled in elementary school for six years (from six to 12 years of age) and in junior high school for three years (from 12 to 15 years of age) for their compulsory education. Traditionally, in these schools, most teachers are employed on a full-time and indefinite basis. However, over the past few decades, an increasing number of teachers have been working part-time - they are not in charge of entire classes, but only teach their chosen subject. The wage of part-time teachers is paid according to the classes they teach, and they are known for their low wages and unstable employment situation.</p>
             <p class="en">This project illustrates that the proportion of part-time teachers has increased in almost all of Japan’s prefectures (47 administrative divisions) over the past 20 years. Other data visualizations in this project also reveal that this trend is particularly affecting women and that the increase in part-time school teachers is a consequence of the finance deterioration of local governments, who have taken over the burden of the national government.</p>
             <p class="en">Data source: <a href="http://www.mext.go.jp/b_menu/toukei/chousa01/kihon/1267995.htm" target="_blank">Basic Research on School</a> and <a href="http://www.mext.go.jp/b_menu/toukei/001/index05.htm" target="_blank">Local Educational Expenditure Research</a>, The Ministry of Education, Culture, Sports, Science and Technology.</p>
