--- a/works/collisions/description-en.html
+++ b/works/collisions/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="3D mapped motor vehicle collisions in Edinburgh, 2012">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/collisions/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Vehicle collisions in Edinburgh" />
-    <meta property="og:description" content="3D mapped motor vehicle collisions in Edinburgh, 2012" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_collisions.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Vehicle collisions in Edinburgh</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,14 +26,17 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">April, 2017</div>
-            <h1>Vehicle collisions in Edinburgh</h1>
-            <h3>3D mapped motor vehicle collisions in Edinburgh, 2012</h3>
+            <div class="date">2017.04</div>
+            <h1>エディンバラ市の交通事故マップ</h1>
+            <h3>Eegeoを使ってエディンバラ市の交通事故をマッピング</h3>
+            <h2>Vehicle collisions in Edinburgh</h2>
+            <h4>3D mapped motor vehicle collisions in Edinburgh, 2012</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_collisions.png">
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This work was submitted as a class assignment.</p>
             <p class="en">Data source: <a href="https://data.edinburghopendata.info/dataset/vehicle-collisions" target="_blank">Edinburgh Open Data</a></p>
             <p class="en">Languages and libraries: JavaScript (eegeo, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
