--- a/works/dissolution/description-en.html
+++ b/works/dissolution/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Timeline of elections and dissolutions in the G7 countries after WWII">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/dissolution/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Elections and Dissolutions in The G7" />
-    <meta property="og:description" content="Timeline of elections and dissolutions in the G7 countries after WWII" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Elections and Dissolutions in The G7</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,9 +26,11 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">November 2017</div>
-            <h1>Elections and Dissolutions in The G7</h1>
-            <h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
+            <div class="date">2017.11</div>
+            <h1>G7各国における議会（下院）の総選挙と解散</h1>
+            <h3>戦後のG7各国における総選挙と解散を時系列で表現</h3>
+            <h2>Elections and Dissolutions in The G7</h2>
+            <h4>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
           </div>
           <div id="eyecatch-block">
             <a href="./" target="_blank">
@@ -36,6 +38,7 @@
             </a>
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This is a timeline of elections and dissolutions in the G7 countries after WWII.</p>
             <p class="en">While Prime Minister of Japan virtually has a right to dissolve The House of Representatives, it has been often criticized to be arbitrary. This visualisation shows national elections of G7 countries after WWII, focusing on causes of elections.</p>
             <p class="en">Data source: <a href="http://dl.ndl.go.jp/view/download/digidepo_10202206_po_0923.pdf?contentNo=1" target="_blank">Takazawa, 2016</a></p>
