--- a/works/landprices/description-en.html
+++ b/works/landprices/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Comparison between the latest price and up to 30 years ago">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/landprices/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Average Land Prices Map of Japanese Municipalities" />
-    <meta property="og:description" content="Comparison between the latest price and up to 30 years ago" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Average Land Prices Map of Japanese Municipalities</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,22 +26,19 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">November 2018</div>
-            <h1>Average Land Prices Map of Japanese Municipalities</h1>
-            <h3>Comparison between the latest price and up to 30 years ago</h3>
+            <div class="date">2018.11</div>
+            <h1>全国「基準地価」市区町村平均値マップ</h1>
+            <h3>市区町村別の平均基準地価をマッピングした。最新価格と最大30年前のデータを比較可能</h3>
+            <h2>Average Land Prices Map of Japanese Municipalities</h2>
+            <h4>Comparison between the latest price and up to 30 years ago</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_landprices.png">
           </div>
           <div id="article-block">
-            <p class="en">The data was retrieved from Land Information Center. You can choose the years to compare from the select box above the map. Each city / town/ village is colored by overall change rate. Details is shown by tapping or mouse hovering on each municipality.</p>
-            <p class="en">Accurately, this map uses a different way to calculate the change rate from the original data source. Thus change rates from the last year might be different from the source PDF file. The comparison pairs are decided according to municipality codes. If a municipality formed a merger with another and no longer have comparison pair, it is colored gray.</p>
-            <p class="en">JavaScript libraries Leaflet.js and D3.js were used to draw the map. Each municipality's border line data was obtained from MLIT of Japan [Japanese].</p>
-            <p class="en">The municipality with the highest increasing rate compared with the last year is Kutchan Town, Hokkaido. This town is known as the part of Niseko area, a famous ski resort. The town has experienced increase of its land price over the course of these several years, due to high demand of foreign tourists staying for a long time.</p>
-            <p class="en">On the other hand, looking at the overall trend from the map, mainly urban area increased its land price. For example, Shibuya Ward, Tokyo, one of the most famous commercial and business center in Japan, raised its overall land prices by 10%. Regional core cities, such as Sendai, Osaka, or Fukuoka, also experienced land price increasing.</p>
-            <p class="en">You can compare the latest price with the past, up to 30 years ago (1988). In 1988, Japan was in the midst of asset price bubble, where people believed that land prices always increase. The nationwide average land price rose to 2.2 times between 1986 and 1990. We can see that most municipalities decreased land price in this 30 years. The worst case is Yuzawa Town, a small town in Niigata that used to be known as ski resort. During a ski boom in late 1980's, lots of holiday apartments were built (they are called "resort mansion" in Japan). While these apartments had been quite popular during asset price bubble, their price rapidly shrunk after the bubble collapsed.</p>
-            <p class="en">Refer to GitHub to download data and see the source code.</p>
-            <p class="en">This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/landprices2/en.html" target="_blank">Toyo Keizai Online</a> [English].</p>
+            <p class="jp">国土交通省から発表された全国の基準地価を市区町村別にプロット。最大30年前まで比較が可能。</p>
+            <p class="jp">この作品は<a href="http://toyokeizai.net/sp/visual/tko/landprices2/" target="_blank">東洋経済オンライン</a>にて公開されています。</p>
+            <p class="en">This work is published in <a href="http://toyokeizai.net/sp/visual/tko/landprices2/en.html" target="_blank">Toyo Keizai Online</a> [English].</p>
           </div>
         </div>
 				<div id="loading-message">
