--- a/works/librarians/description-en.html
+++ b/works/librarians/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Interactive map and chart of part-time ratio of librarians">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/librarians/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Job Security of Librarians" />
-    <meta property="og:description" content="Interactive map and chart of part-time ratio of librarians" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_librarians.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Job Security of Librarians</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,17 +26,20 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">January 2019</div>
-            <h1>Job Security of Librarians</h1>
-            <h3>Interactive map and chart of part-time ratio of librarians</h3>
+            <div class="date">2019.01</div>
+            <h1>都道府県別「図書館司書」の非正規雇用</h1>
+            <h3>1999〜2015年（最新年）における図書館司書の非常勤比率をマップとグラフで可視化した</h3>
+            <h2>Job Security of Librarians</h2>
+            <h4>Interactive map and chart of part-time ratio of librarians</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_librarians.png">
           </div>
           <div id="article-block">
+            <p class="jp">文部科学省「社会教育調査」から取得した図書館司書の非正規雇用データをインタラクティブなマップとグラフで表現しました。</p>
+            <p class="jp">この作品は<a href="http://toyokeizai.net/sp/visual/tko/librarians/" target="_blank">東洋経済オンライン</a>にて公開されています。</p>
             <p class="en">Interactive map and chart of part-time ratio of librarians.</p>
-            <p class="en">This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/librarians/" target="_blank">Toyo Keizai Online</a> [Japanese].</p>
-            <p class="en">Languages and libraries: JavaScript (D3.js, P5.js, jQuery)</p>
+            <p class="en">This work is published in <a href="http://toyokeizai.net/sp/visual/tko/librarians/" target="_blank">Toyo Keizai Online</a> [Japanese].</p>
           </div>
         </div>
 				<div id="loading-message">
