--- a/works/nobelprize/description-en.html
+++ b/works/nobelprize/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="How Nobel Prize laureates are Getting Older">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Scientists Making a Queue" />
-    <meta property="og:description" content="How Nobel Prize laureates are Getting Older" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Scientists Making a Queue</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,14 +26,17 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">May 2017</div>
-            <h1>Scientists Making a Queue</h1>
-            <h3>How Nobel Prize laureates are Getting Older</h3>
+            <div class="date">2017.05</div>
+            <h1>ノーベル賞の「高齢化」インタラクティブグラフ</h1>
+            <h3>各年のノーベル賞受賞者の年齢を可視化</h3>
+            <h2>Scientists Making a Queue</h2>
+            <h4>How Nobel Prize laureates are Getting Older</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_nobelprize.png">
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This visualisation is a visualisation of how Nobel Prize laureates have got older from the beginning of the prize. The winners of this prize are gradually getting older over the past 115 years, especially in the field of natural sciences. In Physics, for example, the latest ten laureates (avg. 71.1) are 23 years older than the first ten (avg. 47.8).</p>
             <p class="en">The main feature of the visualisation is a composite graph that shows laureates with dots and the average age of the past 30 years displayed as a line. You can select a prize (trend line and laureates) and a line of another prize for comparison, from the select boxes above the graph. When the graph (each year) was hovered, detailed information of the winner in that year will be shown in the bottom­ right.</p>
             <p class="en">This work was submitted as a class assignment.</p>
