--- a/works/pyramids/description-en.html
+++ b/works/pyramids/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Population pyramids in each country">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/pyramids/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="From Uganda to Japan" />
-    <meta property="og:description" content="Population pyramids in each country" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_pyramids.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>From Uganda to Japan</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,14 +26,17 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">July 2017</div>
-            <h1>From Uganda to Japan</h1>
-            <h3>Population pyramids in each country</h3>
+            <div class="date">2017.07</div>
+            <h1>世界各国の人口ピラミッド</h1>
+            <h3>ウガンダから日本まで、平均年齢の順に各国の人口ピラミッドを3Dに並べた</h3>
+            <h2>From Uganda to Japan</h2>
+            <h4>Population pyramids in each country</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_pyramids.png">
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This visualisation is 3D data visualisation containing 2D population pyramid graphs of 201 countries (regions) on the planet. Pyramids are ordered by average age, from Uganda as the youngest to Japan as the oldest. You can rotate view and zoom in / out by dragging and using the mouse scroll. When hovering on each pyramid, you can see the country's 2D pyramid on the bottom­ left side.</p>
             <p class="en">This work was submitted as a class assignment.</p>
             <p class="en">Data source: <a href="https://esa.un.org/unpd/wpp/Download/Standard/Population/" target="_blank">UN World Population Prospects 2017</a></p>
