--- a/works/temperature/description-en.html
+++ b/works/temperature/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Daily average temperature in Tokyo over the past 140 years">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/temperature/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Summer in Tokyo is Gradually Becoming Hotter and Longer" />
-    <meta property="og:description" content="Daily average temperature in Tokyo over the past 140 years" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Summer in Tokyo is Gradually Becoming Hotter and Longer</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,16 +26,20 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">July 2018</div>
-            <h1>Summer in Tokyo is Gradually Becoming Hotter and Longer</h1>
-            <h3>Daily average temperature in Tokyo over the past 140 years</h3>
+            <div class="date">2018.07</div>
+            <h1>東京の夏は徐々に暑く・長くなっている</h1>
+            <h3>東京における過去142年の日別平均気温</h3>
+            <h2>Summer in Tokyo is Gradually Becoming Hotter and Longer</h2>
+            <h4>Daily average temperature in Tokyo over the past 140 years</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_temperature.png">
           </div>
           <div id="article-block">
+            <p class="jp">気象庁の公表している6月〜9月における日別平均気温を過去142年分ヒートマップで表現した。</p>
+            <p class="jp">この作品は<a href="http://toyokeizai.net/sp/visual/tko/temperature/" target="_blank">東洋経済オンライン</a>にて公開されています。</p>
             <p class="en">This heat map indicates the average daily temperatures of the summer season (June to September) in Tokyo over the course of 140 years. You can hover over or tap on a cell to see detailed information. Each cell indicates the average temperature on the day by 2°, from blue (less than 18°C) to deep red (30°C or more). The raw data were obtained from the Japan Meteorological Agency. This visualization shows that the temperature in Tokyo has been steadily rising and now approaching a deadly level.</p>
-            <p class="en">This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/temperature/" target="_blank">Toyo Keizai Online</a> [Japanese].</p>
+            <p class="en">This work is published in <a href="http://toyokeizai.net/sp/visual/tko/temperature/" target="_blank">Toyo Keizai Online</a> [Japanese].</p>
           </div>
         </div>
 				<div id="loading-message">
