--- a/works/tourists/description-en.html
+++ b/works/tourists/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Number of tourists from each country to each prefecture in Japan, in 2015">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/tourists/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Tourists to Japan" />
-    <meta property="og:description" content="Number of tourists from each country to each prefecture in Japan, in 2015" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Tourists to Japan</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,14 +26,17 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">11 Feb 2017</div>
-            <h1>Tourists to Japan</h1>
-            <h3>Number of tourists from each country to each prefecture in Japan, in 2015</h3>
+            <div class="date">2017.02</div>
+            <h1>日本への観光客</h1>
+            <h3>訪日観光客の目的地と出身国・地域をサンキー・ダイアグラムで表現</h3>
+            <h2>Tourists to Japan</h2>
+            <h4>Number of tourists from each country to each prefecture in Japan, in 2015</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_tourists.png">
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This work was submitted as a class assignment.</p>
             <p class="en">Data source: <a href="https://opendata.resas-portal.go.jp/docs/api/v1/index.html" target="_blank">RESAS by Cabinet Office</a></p>
             <p class="en">Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
