--- a/works/trade/description-en.html
+++ b/works/trade/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Import and Export between Japan and the World, 2016">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/trade/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Material to Product" />
-    <meta property="og:description" content="Import and Export between Japan and the World, 2016" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_trade.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Material to Product</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,14 +26,17 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">August 2017</div>
-            <h1>Material to Product</h1>
-            <h3>Import and Export between Japan and the World, 2016</h3>
+            <div class="date">2017.08</div>
+            <h1>日本の貿易品目・貿易相手</h1>
+            <h3>2016年の輸入・輸出をサンキー・ダイアグラムで表現</h3>
+            <h2>Material to Product</h2>
+            <h4>Import and Export between Japan and the World, 2016</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_trade.png">
           </div>
           <div id="article-block">
+            <p class="jp"></p>
             <p class="en">This visualisation is an animated sankey diagram which describes imports and exports between Japan and other countries. Vertical four bars indicate respectively (from left) countries of import source, imported products, exported products, and countries of export destination. When these bars are hovered on, breakdowns of import / export are shown in the shape of bezier curves. For example, if the top­left section (imports from China) is hovered on, the imported value by goods from China is displayed. The heights of bars and the thickness of curves depend on the value (1,000,000 GBP, converted as 1 GBP = 146 JPY).</p>
             <p class="en">This work was submitted as a class assignment.</p>
             <p class="en">Data source: <a href="http://www.customs.go.jp/toukei/info/index_e.htm" target="_blank">Trade Statistics of Japan</a></p>
