--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content=""But you do not know where I came from or where I am going"">
+    <meta name=”description” content="">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Visualization of Human Trafficking" />
-    <meta property="og:description" content=""But you do not know where I came from or where I am going"" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Visualization of Human Trafficking</title>
+    <title></title>
 		<link rel="stylesheet" href="../../assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
@@ -26,9 +26,11 @@
 		<div id="pjax-container">
         <div id="pjax-content" page="work-description">
           <div id="title-block">
-            <div class="date">July 2018</div>
-            <h1>Visualization of Human Trafficking</h1>
-            <h3>"But you do not know where I came from or where I am going"</h3>
+            <div class="date">2018.07</div>
+            <h1>人身売買データの可視化</h1>
+            <h3></h3>
+            <h2>Visualization of Human Trafficking</h2>
+            <h4>"But you do not know where I came from or where I am going"</h3>
           </div>
           <div id="eyecatch-block">
             <a href="./" target="_blank">
@@ -36,6 +38,7 @@
             </a>
           </div>
           <div id="article-block">
+            <p class="jp">人身売買に関するデータを地図とデータでビジュアライズした。Vis for Social Goodに提出した作品。</p>
             <p class="en">Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
             <p class="en">By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
             <p class="en"><img src="img/screencast_viz4socialgood.gif"></p>
