--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
           </div>
           <div id="works-block">
 			<div class="work">
+				<a href="./works/electoralfund/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_electoralfund.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">2019.07</div>
+					<div class="title-jp">選挙運動費用「余剰金」詳細データ</div>
+					<div class="title-en">Surplus of Electoral Funds</div>
+				</div>
+			</div>
+			<div class="work">
 				<a href="./works/passport/description-en.html" class="pjax">
 					<div data-src="./assets/img/eyecatch_passport.png" class="lazy"></div>
 				</a>
