--- a/about.html
+++ b/about.html
@@ -42,6 +42,41 @@
           <div id="publicity-block">
             <h2>Publicity</h2>
             <section>
+              <div class="date">2020.01</div>
+              <div class="content">
+                <p class="jp">首都大学東京インダストリアルアート学部の授業にゲスト講師として参加しました。</p>
+                <p class="en">Participated as a guest lecturer in a class at the Tokyo Metropolitan University Faculty of Systems Design.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2019.12</div>
+              <div class="content">
+                <p class="jp">東洋経済オンラインにてデータビジュアライゼーション<a href="https://toyokeizai.net/sp/visual/tko/precipitation/" target="_blank">『グラフィックで振り返る2019年の豪雨・台風災害』</a>を公開しました。</p>
+                <p class="en">Published <a href="https://toyokeizai.net/sp/visual/tko/precipitation/" target="_blank">an interactive data visualization</a> on Toyo Keizai Online.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2019.12</div>
+              <div class="content">
+                <p class="jp"><a href="https://data-visualization-japan.connpass.com/event/160042/" target="_blank">Data Visualization Japan meetup 2019</a>にて登壇しました。</p>
+                <p class="en">Participated as a guest speaker in <a href="https://data-visualization-japan.connpass.com/event/160042/" target="_blank">Data Visualization Japan meetup 2019</a>.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2019.08</div>
+              <div class="content">
+                <p class="jp">東洋経済オンラインにてインフォグラフィック<a href="https://toyokeizai.net/sp/visual/tko/overpitching/" target="_blank">『甲子園投手たちはどれだけ「過剰」な投球をしているか』</a>を公開しました。</p>
+                <p class="en">Published <a href="https://toyokeizai.net/sp/visual/tko/overpitching/" target="_blank">an infographic</a> on Toyo Keizai Online.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2019.12</div>
+              <div class="content">
+                <p class="jp">東洋経済オンラインにてデータビジュアライゼーション<a href="https://toyokeizai.net/sp/visual/tko/electoralfund/" target="_blank">『選挙運動費用「余剰金」詳細データ』</a>を公開しました。</p>
+                <p class="en">Published <a href="https://toyokeizai.net/sp/visual/tko/electoralfund/" target="_blank">an interactive data visualization</a> on Toyo Keizai Online.</p>
+              </div>
+            </section>
+            <section>
               <div class="date">2019.05</div>
               <div class="content">
                 <p class="jp">技術評論社『<a href="https://gihyo.jp/book/2019/978-4-297-10582-2" target="_blank">プロ直伝 伝わるデータ・ビジュアル術 ――Excelだけでは作れないデータ可視化レシピ</a>』（共著）が出版されました。</p>
@@ -58,8 +93,8 @@
           </div>
           <div id="bio-block">
             <h2>Bio</h2>
-            <p class="jp">2010年筑波大学卒業（社会心理学）。同年から都内の出版社に勤務。2017年英国エディンバラ大学大学院修士（デザイン＆デジタルメディア専攻）。帰国後は週刊誌やウェブメディアの編集部でエンジニア兼デザイナーとして働く。</p>
-            <p class="en">Bachelor degree at University of Tsukuba (Social Psychology) in 2010. Started working at a publisher in Tokyo after graduation. Master degree at University of Edinburgh (Design & Digital Media) in 2017. Currently working as a data visualization designer / engineer.</p>
+            <p class="jp">2010年筑波大学卒業（社会心理学）。同年から都内の出版社に勤務。2017年英国エディンバラ大学大学院修士（デザイン＆デジタルメディア専攻）。帰国後は週刊誌や都内のニュースメディア編集部でデータ可視化のスペシャリストとして働く。</p>
+            <p class="en">Bachelor degree at University of Tsukuba (Social Psychology) in 2010. Started working at a publisher in Tokyo after graduation. Master degree at University of Edinburgh (Design & Digital Media) in 2017. Currently working as a data visualization specialist.</p>
           </div>
         </div>
 				<div id="loading-message">
