--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
           </div>
           <div id="works-block">
 			<div class="work">
+				<a href="./works/precipitation/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_precipitation.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">2019.12</div>
+					<div class="title-jp">グラフィックで振り返る2019年の豪雨・台風災害</div>
+					<div class="title-en">Interactive Data Visualization of Heavy Rain and Typhoon Disasters in 2019</div>
+				</div>
+			</div>
+			<div class="work">
+				<a href="./works/overpitching/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_overpitching.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">2019.08</div>
+					<div class="title-jp">甲子園投手たちはどれだけ「過剰」な投球をしているか</div>
+					<div class="title-en"></div>
+				</div>
+			</div>
+			<div class="work">
 				<a href="./works/electoralfund/description-en.html" class="pjax">
 					<div data-src="./assets/img/eyecatch_electoralfund.png" class="lazy"></div>
 				</a>
