--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
           </div>
           <div id="works-block">
 			<div class="work">
+				<a href="./works/covid19/description-en.html" class="pjax">
+					<div data-src="./assets/img/eyecatch_covid19.png" class="lazy"></div>
+				</a>
+				<div class="info">
+					<div class="date">2020.02</div>
+					<div class="title-jp">新型コロナウイルス 国内感染の状況</div>
+					<div class="title-en">Coronavirus Disease (COVID-19) Situation Report in Japan</div>
+				</div>
+			</div>
+			<div class="work">
 				<a href="./works/precipitation/description-en.html" class="pjax">
 					<div data-src="./assets/img/eyecatch_precipitation.png" class="lazy"></div>
 				</a>
