Add publicity: featured on Engineer type

--- a/about.html
+++ b/about.html
@@ -42,6 +42,14 @@
           <div id="publicity-block">
             <h2>Publicity</h2>
             <section>
+              <div class="date">2020.03</div>
+              <div class="content">
+                <p class="jp">「<a href="https://toyokeizai.net/sp/visual/tko/covid19/" target="_blank">新型コロナウイルス 国内感染の状況</a>」に関して<a href="https://type.jp/et/feature/" target="_blank">エンジニアtype</a>様から取材を受けました。</p>
+                <p class="jp"><a href="https://type.jp/et/feature/12712" target="_blank">東洋経済「新型コロナウイルス 国内感染の状況」サイトが大反響を生んだ理由は？ 制作者のデータ可視化デザイナーに聞く - エンジニアtype | 転職type</a></p>
+                <p class="en">Featured on <a href="https://type.jp/et/feature/" target="_blank">Engineer type</a> about <a href="https://toyokeizai.net/sp/visual/tko/covid19/en.html" target="_blank">Coronavirus Disease (COVID-19) Situation Report in Japan</a>, which was published on 27 February.</p>
+              </div>
+            </section>
+            <section>
               <div class="date">2020.01</div>
               <div class="content">
                 <p class="jp">首都大学東京インダストリアルアート学部の授業にゲスト講師として参加しました。</p>
