--- a/about.html
+++ b/about.html
@@ -71,6 +71,13 @@
               </div>
             </section>
             <section>
+              <div class="date">2019.09</div>
+              <div class="content">
+                <p class="jp">SlowNews社主催のイベント「<a href="https://slownews-event1.peatix.com/?lang=ja" target="_blank">オープンジャーナリズム実践講座　国会議員の「選挙余剰金」全調査データはこうして作られた</a>」にて登壇しました。</p>
+                <p class="en">Participated in an event as a speaker: Open Journalism Practical Lecture.</p>
+              </div>
+            </section>
+            <section>
               <div class="date">2019.08</div>
               <div class="content">
                 <p class="jp">東洋経済オンラインにてインフォグラフィック<a href="https://toyokeizai.net/sp/visual/tko/overpitching/" target="_blank">『甲子園投手たちはどれだけ「過剰」な投球をしているか』</a>を公開しました。</p>
@@ -78,7 +85,7 @@
               </div>
             </section>
             <section>
-              <div class="date">2019.12</div>
+              <div class="date">2019.07</div>
               <div class="content">
                 <p class="jp">東洋経済オンラインにてデータビジュアライゼーション<a href="https://toyokeizai.net/sp/visual/tko/electoralfund/" target="_blank">『選挙運動費用「余剰金」詳細データ』</a>を公開しました。</p>
                 <p class="en">Published <a href="https://toyokeizai.net/sp/visual/tko/electoralfund/" target="_blank">an interactive data visualization</a> on Toyo Keizai Online.</p>
