Add recent activities

--- a/about.html
+++ b/about.html
@@ -42,11 +42,42 @@
           <div id="publicity-block">
             <h2>Publicity</h2>
             <section>
+              <div class="date">2020.07</div>
+              <div class="content">
+                <p class="jp">東洋経済オンラインにて記事を執筆しました。</p>
+                <p class="jp"><a href="https://toyokeizai.net/articles/-/362511" target="_blank">｢コロナはただの風邪｣と言う人が知らない事実 - 東洋経済オンライン</a></p>
+                <p class="en">Published an article on Toyo Keizai Online.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2020.06</div>
+              <div class="content">
+                <p class="jp">YouTube Liveイベントにてスピーカーとして出演しました。</p>
+                <p class="jp"><a href="https://toyokeizai.smartseminar.jp/public/seminar/view/1613" target="_blank">東洋経済BrandLabLive データビジュアライズに見る「人を動かすデザイン設計」</a></p>
+                <p class="en">Participated in a YouTube Live event.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2020.06</div>
+              <div class="content">
+                <p class="jp">宣伝会議SIMC ウェビナーウィーク「データ × クリエイティブ － 人に伝える、人を動かすデータ活用」に出演しました。</p>
+                <p class="jp"><a href="https://www.event-forum.jp/sendenkaigi/net-mc/2020/speakers.asp?lec=toyokeizai-ogiwara" target="_blank">宣伝会議SIMC ウェビナーウィーク</a></p>
+                <p class="en">Participated in a YouTube Live event.</p>
+              </div>
+            </section>
+            <section>
               <div class="date">2020.03</div>
               <div class="content">
                 <p class="jp">「<a href="https://toyokeizai.net/sp/visual/tko/covid19/" target="_blank">新型コロナウイルス 国内感染の状況</a>」に関して<a href="https://type.jp/et/feature/" target="_blank">エンジニアtype</a>様から取材を受けました。</p>
                 <p class="jp"><a href="https://type.jp/et/feature/12712" target="_blank">東洋経済「新型コロナウイルス 国内感染の状況」サイトが大反響を生んだ理由は？ 制作者のデータ可視化デザイナーに聞く - エンジニアtype | 転職type</a></p>
                 <p class="en">Featured on <a href="https://type.jp/et/feature/" target="_blank">Engineer type</a> about <a href="https://toyokeizai.net/sp/visual/tko/covid19/en.html" target="_blank">Coronavirus Disease (COVID-19) Situation Report in Japan</a>, which was published on 27 February.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2020.02</div>
+              <div class="content">
+                <p class="jp">東洋経済オンラインにてデータビジュアライゼーション<a href="https://toyokeizai.net/sp/visual/tko/covid19/" target="_blank">『新型コロナウイルス 国内感染の状況』</a>を公開しました。</p>
+                <p class="en">Published <a href="https://toyokeizai.net/sp/visual/tko/covid19/" target="_blank">an interactive data visualization</a> on Toyo Keizai Online.</p>
               </div>
             </section>
             <section>
