Add an activity

--- a/about.html
+++ b/about.html
@@ -44,6 +44,14 @@
             <section>
               <div class="date">2020.07</div>
               <div class="content">
+                <p class="jp"><a href="https://mag.sendenkaigi.com/brain/" target="_blank">月刊『ブレーン』</a>8月号にて、6月の対談レポートが掲載されました。</p>
+                <p class="jp"><a href="https://mag.sendenkaigi.com/brain/202008/design-for-new-normal/019262.php" target="_blank">人に伝え人を動かすデータビジュアライゼーションの現在地 | ブレーンデジタル版</a></p>
+                <p class="en">Published an article on Toyo Keizai Online.</p>
+              </div>
+            </section>
+            <section>
+              <div class="date">2020.07</div>
+              <div class="content">
                 <p class="jp">東洋経済オンラインにて記事を執筆しました。</p>
                 <p class="jp"><a href="https://toyokeizai.net/articles/-/362511" target="_blank">｢コロナはただの風邪｣と言う人が知らない事実 - 東洋経済オンライン</a></p>
                 <p class="en">Published an article on Toyo Keizai Online.</p>
